tests/ui/de-enum-no-tag.stderr
error: Externally tagged enums are not supported yet by jayson. Add #[jayson(tag = "some_tag_key")]
 --> tests/ui/de-enum-no-tag.rs:3:10
  |
3 | #[derive(DeserializeFromValue)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `DeserializeFromValue` (in Nightly builds, run with -Z macro-backtrace for more info)
